Do solution newline normalization well